Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.h
@@ -53,6 +53,7 @@ typedef enum FullScreenState : NSInteger FullScreenState;
     NSRect _initialFrame;
     NSRect _finalFrame;
     RetainPtr<NSTimer> _watchdogTimer;
+    RetainPtr<NSArray> _savedConstraints;
 
     FullScreenState _fullScreenState;
 
@@ -63,6 +64,7 @@ typedef enum FullScreenState : NSInteger FullScreenState;
 
 @property (readonly) NSRect initialFrame;
 @property (readonly) NSRect finalFrame;
+@property (assign) NSArray *savedConstraints;
 
 - (id)initWithWindow:(NSWindow *)window webView:(NSView *)webView page:(WebKit::WebPageProxy&)page;
 
